--- a/知识碎片/数据库专题.md
+++ b/知识碎片/数据库专题.md
@@ -5,3 +5,6 @@
 ⭐️ [MySQL添加联合索引](/知识碎片/数据库专题/MySQL添加联合索引.md)
 
 ⭐️[将一个表的数据插入到另一个表中](/知识碎片/数据库专题/将一个表的数据插入到另一个表中.md)
+
+⭐️ [MySQL开启远程连接](/知识碎片/数据库专题/MySQL开启远程连接.md)
+
