--- a/知识碎片/后端专题.md
+++ b/知识碎片/后端专题.md
@@ -9,3 +9,5 @@
 ⭐️[PDF文件转图片](/知识碎片/后端专题/PDF文件转图片.md)
 
 ⭐️[Linux防火墙配置](/知识碎片/后端专题/Linux防火墙配置.md)
+
+⭐️[SpringBoot中的6种API请求参数读取方式](/知识碎片/后端专题/SpringBoot中的6种API请求参数读取方式.md)
